--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -173,3 +173,12 @@ new_http_archive(
     build_file = "third_party/curlpp.BUILD",
     strip_prefix = "curlpp-0.8.1",
 )
+
+#ros
+new_http_archive(
+    name = "ros",
+    url = "https://github.com/ApolloAuto/apollo-platform/releases/download/1.0.0/ros-indigo-apollo-1.0.0.MACHINE_ARCH.tar.gz",
+    build_file = "third_party/ros.BUILD",
+    strip_prefix = "ros",
+)
+
