cleanup code in modules/control following up "Names and Order of Includes" in google c++ style guide (https://google.github.io/styleguide/cppguide.html).

--- a/modules/control/filters/BUILD
+++ b/modules/control/filters/BUILD
@@ -58,7 +58,7 @@ cc_test(
         ":digital_filter",
         ":digital_filter_coefficients",
         "//modules/common",
-        "//third_party/ros:ros_common",
+        "@ros//:ros_common",
         "@gtest//:main",
     ],
 )
