--- a/modules/canbus/vehicle/lincoln/protocol/BUILD
+++ b/modules/canbus/vehicle/lincoln/protocol/BUILD
@@ -200,6 +200,18 @@ cc_test(
 )
 
 cc_test(
+    name = "steering_64_test",
+    size = "small",
+    srcs = [
+        "steering_64_test.cc",
+    ],
+    deps = [
+        "//modules/canbus/vehicle/lincoln/protocol:canbus_lincoln_protocol",
+        "@gtest//:main",
+    ],
+)
+
+cc_test(
     name = "steering_65_test",
     size = "small",
     srcs = [
