--- a/modules/canbus/vehicle/lincoln/protocol/BUILD
+++ b/modules/canbus/vehicle/lincoln/protocol/BUILD
@@ -224,6 +224,18 @@ cc_test(
 )
 
 cc_test(
+    name = "throttle_62_test",
+    size = "small",
+    srcs = [
+        "throttle_62_test.cc",
+    ],
+    deps = [
+        "//modules/canbus/vehicle/lincoln/protocol:canbus_lincoln_protocol",
+        "@gtest//:main",
+    ],
+)
+
+cc_test(
     name = "throttle_63_test",
     size = "small",
     srcs = [
