--- a/modules/prediction/container/obstacles/BUILD
+++ b/modules/prediction/container/obstacles/BUILD
@@ -10,3 +10,12 @@ cc_library(
     ]
 )
 
+cc_library(
+    name = "obstacle",
+    srcs = ["obstacle.cc"],
+    hdrs = ["obstacle.h"],
+    deps = [
+        "//modules/perception/proto:perception_proto"
+    ]
+)
+
