Remove trivial renaming of Status and ErrorCode.

--- a/modules/control/controller/BUILD
+++ b/modules/control/controller/BUILD
@@ -26,9 +26,9 @@ cc_library(
         "//modules/common/math:lqr",
         "//modules/common/math:math_utils",
         "//modules/common/proto:common_proto",
+        "//modules/common/status",
         "//modules/common/time",
         "//modules/control/common:control_gflags",
-        "//modules/control/common:definitions",
         "//modules/control/common:trajectory_analyzer",
         "//modules/control/filters:digital_filter",
         "//modules/control/filters:digital_filter_coefficients",
@@ -49,10 +49,10 @@ cc_library(
     deps = [
         ":controller_interface",
         "//modules/common:log",
+        "//modules/common/status",
         "//modules/common/time",
         "//modules/common/vehicle_state",
         "//modules/control/common:control_gflags",
-        "//modules/control/common:definitions",
         "//modules/control/common:interpolation_2d",
         "//modules/control/common:pid_controller",
         "//modules/control/common:trajectory_analyzer",
