Added prediction conf in proto

--- a/modules/prediction/proto/BUILD
+++ b/modules/prediction/proto/BUILD
@@ -4,6 +4,16 @@ load("@org_pubref_rules_protobuf//cpp:rules.bzl", "cc_proto_library")
 load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_compile")
 
 cc_proto_library(
+    name = "prediction_conf_proto",
+    protos = [
+        "prediction_conf.proto",
+    ],
+    deps = [
+        "//modules/common/proto:common_proto",
+    ],
+)
+
+cc_proto_library(
     name = "prediction_proto",
     protos = [
         "prediction_obstacle.proto",
