--- a/modules/prediction/container/obstacles/BUILD
+++ b/modules/prediction/container/obstacles/BUILD
@@ -15,11 +15,13 @@ cc_library(
     srcs = ["obstacle.cc"],
     hdrs = ["obstacle.h"],
     deps = [
-        "//modules/common/proto:error_code_proto",
-        "//modules/perception/proto:perception_proto",
-        "//modules/prediction/proto:feature_proto",
         "//modules/common:log",
         "//modules/common/math:kalman_filter",
+        "//modules/common/proto:error_code_proto",
+        "//modules/common/math:math_utils",
+        "//modules/perception/proto:perception_proto",
+        "//modules/prediction/proto:feature_proto",
+        "//modules/prediction/common:prediction_common",
     ],
 )
 
