--- a/modules/prediction/BUILD
+++ b/modules/prediction/BUILD
@@ -8,12 +8,14 @@ cc_library(
         "//modules/common",
         "//modules/common:apollo_app",
         "//modules/common:log",
+        "//modules/common/util:util",
         "//modules/common/adapters:adapter_manager",
         "//modules/prediction/container:container_manager",
         "//modules/prediction/predictor:predictor_manager",
         "//modules/perception/proto:perception_proto",
         "//modules/prediction/common:prediction_common",
         "//modules/prediction/proto:prediction_proto",
+        "//modules/prediction/proto:prediction_conf_proto",
     ],
 )
 
