--- a/modules/prediction/conf/adapter.conf
+++ b/modules/prediction/conf/adapter.conf
@@ -4,6 +4,11 @@ config {
   message_history_limit: 10
 }
 config {
+  type: LOCALIZATION
+  mode: RECEIVE_ONLY
+  message_history_limit: 10
+}
+config {
   type: PREDICTION
   mode: PUBLISH_ONLY
   message_history_limit: 10
