--- a/modules/prediction/BUILD
+++ b/modules/prediction/BUILD
@@ -11,6 +11,7 @@ cc_library(
         "//modules/common/util:util",
         "//modules/common/adapters:adapter_manager",
         "//modules/prediction/container:container_manager",
+        "//modules/prediction/evaluator:evaluator_manager",
         "//modules/prediction/predictor:predictor_manager",
         "//modules/perception/proto:perception_proto",
         "//modules/prediction/common:prediction_common",
