Added evaluator factory framework

--- a/modules/prediction/evaluator/BUILD
+++ b/modules/prediction/evaluator/BUILD
@@ -1,6 +1,16 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
+    name = "evaluator_factory",
+    hdrs = ["evaluator_factory.h"],
+    deps = [
+        "//modules/prediction/evaluator:evaluator",
+        "//modules/common/util:factory",
+        "//modules/common:macro",
+    ]
+)
+
+cc_library(
     name = "evaluator_manager",
     srcs = ["evaluator_manager.cc"],
     hdrs = ["evaluator_manager.h"],
@@ -8,7 +18,7 @@ cc_library(
         "//modules/prediction/evaluator:evaluator",
         "//modules/perception/proto:perception_proto",
         "//modules/common:macro",
-        "@glog//:glog"
+        "@glog//:glog",
     ]
 )
 
