Migrate planning/common/base_types.h to proto.

--- a/modules/planning/BUILD
+++ b/modules/planning/BUILD
@@ -14,6 +14,7 @@ cc_library(
         "//modules/common",
         "//modules/common:log",
         "//modules/common/adapters:adapter_manager",
+        "//modules/common/proto:path_point_proto",
         "//modules/common/vehicle_state",
         "//modules/decision/proto:decision_proto",
         "//modules/perception/proto:perception_proto",
