--- a/modules/prediction/evaluator/BUILD
+++ b/modules/prediction/evaluator/BUILD
@@ -3,10 +3,13 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
     name = "evaluator_factory",
     hdrs = ["evaluator_factory.h"],
+    srcs = ["evaluator_factory.cc"],
     deps = [
         "//modules/prediction/evaluator:evaluator",
+        "//modules/prediction/proto:prediction_conf_proto",
         "//modules/common/util:factory",
         "//modules/common:macro",
+        "@glog//:glog",
     ]
 )
 
