--- a/modules/prediction/predictor/BUILD
+++ b/modules/prediction/predictor/BUILD
@@ -1,6 +1,19 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
+    name = "predictor_factory",
+    hdrs = ["predictor_factory.h"],
+    srcs = ["predictor_factory.cc"],
+    deps = [
+        "//modules/prediction/predictor:predictor",
+        "//modules/prediction/proto:prediction_conf_proto",
+        "//modules/common/util:factory",
+        "//modules/common:macro",
+        "@glog//:glog",
+    ]
+)
+
+cc_library(
     name = "predictor_manager",
     srcs = ["predictor_manager.cc"],
     hdrs = ["predictor_manager.h"],
