added lint test for the Double class

--- a/modules/planning/math/BUILD
+++ b/modules/planning/math/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -9,6 +11,8 @@ cc_library(
         "double.h",
     ]),
     deps = [
-	"@glog//:glog",
+        "@glog//:glog",
     ],
 )
+
+cpplint()
