--- a/modules/prediction/container/BUILD
+++ b/modules/prediction/container/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -19,3 +21,5 @@ cc_library(
         "@com_github_google_protobuf//:protobuf"
     ]
 )
+
+cpplint()
