--- a/modules/prediction/container/pose/BUILD
+++ b/modules/prediction/container/pose/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -8,3 +10,5 @@ cc_library(
         "//modules/prediction/container:container",
     ]
 )
+
+cpplint()
