--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -1,15 +1,22 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "lib_planning_common",
+    name = "planning_gflags",
     srcs = [
         "planning_gflags.cc",
     ],
-    hdrs = glob([
-        "*.h",
-    ]),
+    hdrs = [
+        "planning_gflags.h",
+    ],
     deps = [
         "//external:gflags",
+    ],
+)
+
+cc_library(
+    name = "lib_planning_common",
+    deps = [
+        ":planning_gflags",
         "//modules/common:log",
         "//modules/localization/common:localization_common",
         "//modules/localization/proto:localization_proto",
