--- a/modules/prediction/container/pose/BUILD
+++ b/modules/prediction/container/pose/BUILD
@@ -8,6 +8,8 @@ cc_library(
     hdrs = ["pose_container.h"],
     deps = [
         "//modules/prediction/container:container",
+        "//modules/perception/proto:perception_proto",
+        "//modules/localization/proto:localization_proto",
     ]
 )
 
