--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -36,3 +38,5 @@ cc_library(
         "//modules/localization/proto:localization_proto",
     ],
 )
+
+cpplint()
