add vehicle evaluator base class (#26)

--- a/modules/prediction/evaluator/BUILD
+++ b/modules/prediction/evaluator/BUILD
@@ -31,7 +31,7 @@ cc_library(
     name = "evaluator",
     hdrs = ["evaluator.h"],
     deps = [
-    
+        "//modules/prediction/container/obstacles:obstacle"
     ]
 )
 
