--- a/modules/planning/planner/BUILD
+++ b/modules/planning/planner/BUILD
@@ -13,6 +13,7 @@ cc_library(
         "//modules/common:log",
         "//modules/common/proto:path_point_proto",
         "//modules/common/util",
+        "//modules/common/util:factory",
         "//modules/common/vehicle_state",
         "//modules/planning/common:lib_planning_common",
         "@eigen//:eigen",
