--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -14,12 +14,25 @@ cc_library(
 )
 
 cc_library(
+    name = "logic_map",
+    srcs = [
+        "logic_point.cc",
+    ],
+    hdrs = [
+        "logic_point.h",
+    ],
+    deps = [
+        "//modules/common/math",
+    ],
+)
+
+cc_library(
     name = "lib_planning_common",
     deps = [
+        "@eigen//:eigen",
         ":planning_gflags",
         "//modules/common:log",
         "//modules/localization/common:localization_common",
         "//modules/localization/proto:localization_proto",
-        "@eigen//:eigen",
     ],
 )
