--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -48,7 +48,7 @@ cc_library(
     ],
     deps = [
         "//modules/common/math",
-        "//modules/planning/common/speed:speed",
+        "//modules/planning/common/speed",
     ],
 )
 
