added logic info

--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -18,10 +18,12 @@ cc_library(
 cc_library(
     name = "logic_map",
     srcs = [
+        "logic_info.cc",
         "logic_node.cc",
         "logic_point.cc",
     ],
     hdrs = [
+        "logic_info.h",
         "logic_node.h",
         "logic_point.h",
     ],
