add routing_proxy and office garage original map (still need convert xy offset), one sample routing.

--- a/modules/map/proto/BUILD
+++ b/modules/map/proto/BUILD
@@ -18,6 +18,7 @@ cc_proto_library(
         "map_speed_bump.proto",
         "map_stop_sign.proto",
         "map_yield_sign.proto",
+        "routing.proto",
     ],
     deps = [
         "//modules/common/proto:common_proto",
@@ -39,6 +40,7 @@ py_proto_compile(
         "map_speed_bump.proto",
         "map_stop_sign.proto",
         "map_yield_sign.proto",
+        "routing.proto",
     ],
     deps = [
         "//modules/common/proto:common_proto_pylib",
