Migrate DiscretizedTrajectory to Apollo 1.5.

--- a/modules/planning/math/BUILD
+++ b/modules/planning/math/BUILD
@@ -73,6 +73,8 @@ cc_library(
         "interpolation.h",
     ]),
     deps = [
+        ":hermite_spline",
+        "//modules/common/math:math_utils",
         "@glog//:glog",
     ],
 )
