init checkin of planning/proxy/vehicle_state_proxy and prototype of related classes.

--- a/modules/planning/proxy/BUILD
+++ b/modules/planning/proxy/BUILD
@@ -1,5 +1,7 @@
 package(default_visibility = ["//visibility:public"])
 
+load("//tools:cpplint.bzl", "cpplint")
+
 cc_library(
     name = "proxy",
     srcs = [
@@ -17,3 +19,24 @@ cc_library(
         "//modules/map/proto:map_proto",
     ],
 )
+
+cc_library(
+    name = "vehicle_state_proxy",
+    srcs = [
+        "vehicle_state_proxy.cc",
+    ],
+    hdrs = [
+        "vehicle_state_proxy.h",
+    ],
+    deps = [
+        "//modules/common:log",
+        "//modules/common/proto:error_code_proto",
+        "//modules/common/proto:path_point_proto",
+        "//modules/common/configs:vehicle_config_helper",
+        "//modules/planning/common:lib_planning_common",
+        "//modules/canbus/proto:canbus_proto",
+        "//modules/localization/proto:localization_proto",
+    ],
+)
+
+cpplint()
