Add missing cpplint to common

--- a/modules/common/adapters/BUILD
+++ b/modules/common/adapters/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -86,3 +88,5 @@ cc_library(
         "@glog//:glog",
     ],
 )
+
+cpplint()
