--- a/modules/hmi/ros_node/BUILD
+++ b/modules/hmi/ros_node/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_binary(
@@ -17,3 +19,5 @@ cc_binary(
         "@ros//:ros_common",
     ],
 )
+
+cpplint()
