--- a/modules/common/BUILD
+++ b/modules/common/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -42,3 +44,5 @@ cc_library(
         "@ros//:ros_common",
     ],
 )
+
+cpplint()
