--- a/modules/common/util/BUILD
+++ b/modules/common/util/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -81,3 +83,5 @@ cc_test(
         "@gtest//:main",
     ],
 )
+
+cpplint()
