--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -183,3 +183,28 @@ new_http_archive(
     strip_prefix = "ros",
     url = "https://github.com/ApolloAuto/apollo-platform/releases/download/1.0.0/ros-indigo-apollo-1.0.0.MACHINE_ARCH.tar.gz",
 )
+
+# OpenCV 2.4.13.2
+new_http_archive(
+    name = "opencv2",
+    url = "https://github.com/opencv/opencv/archive/2.4.13.2.zip",
+    build_file = "third_party/opencv2.BUILD",
+    strip_prefix = "opencv-2.4.13.2",
+)
+
+# PCL 1.7
+# =======
+# This requires libpcl-dev to be installed in your Ubuntu/Debian.
+new_local_repository(
+    name = "pcl",
+    path = "/usr/include/pcl-1.7",
+    build_file = "third_party/pcl.BUILD",
+)
+
+# YAML-CPP
+new_http_archive(
+    name = "yaml_cpp",
+    url = "https://github.com/jbeder/yaml-cpp/archive/yaml-cpp-0.5.3.zip",
+    build_file = "third_party/yaml_cpp.BUILD",
+    strip_prefix = "yaml-cpp-yaml-cpp-0.5.3",
+)
