Fix more missing cpplint

--- a/modules/monitor/hwmonitor/hw/esdcan/BUILD
+++ b/modules/monitor/hwmonitor/hw/esdcan/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -33,3 +35,5 @@ cc_library(
         "//third_party/can_card_library/esd_can",
     ],
 )
+
+# cpplint()
