--- a/modules/canbus/vehicle/lincoln/BUILD
+++ b/modules/canbus/vehicle/lincoln/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -85,3 +87,5 @@ cc_test(
         "@gtest//:main",
     ],
 )
+
+cpplint()
