--- a/modules/canbus/vehicle/lincoln/protocol/BUILD
+++ b/modules/canbus/vehicle/lincoln/protocol/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -306,3 +308,5 @@ cc_test(
         "@gtest//:main",
     ],
 )
+
+cpplint()
