--- a/modules/planning/BUILD
+++ b/modules/planning/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -57,3 +59,5 @@ filegroup(
         "testdata/**",
     ]),
 )
+
+cpplint()
