--- a/modules/planning/planner/BUILD
+++ b/modules/planning/planner/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -35,3 +37,5 @@ cc_test(
         "@gtest//:main",
     ],
 )
+
+cpplint()
