--- a/modules/prediction/BUILD
+++ b/modules/prediction/BUILD
@@ -1,3 +1,5 @@
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -23,3 +25,5 @@ cc_binary(
         "//external:gflags",
     ],
 )
+
+cpplint()
