migrate canbus/Signal to common/VehicleSignal (#63)

--- a/modules/canbus/proto/BUILD
+++ b/modules/canbus/proto/BUILD
@@ -11,6 +11,7 @@ cc_proto_library(
     deps = [
         "//modules/common",
         "//modules/common/proto:common_proto",
+        "//modules/common/proto:vehicle_signal_proto",
     ],
 )
 
