reorganize the planners

--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -168,7 +168,7 @@ cc_library(
 )
 
 cc_library(
-    name = "lib_planning_common",
+    name = "planning_common",
     deps = [
         "@eigen//:eigen",
         ":frame",
