--- a/modules/planning/proxy/BUILD
+++ b/modules/planning/proxy/BUILD
@@ -33,7 +33,7 @@ cc_library(
         "//modules/common/proto:error_code_proto",
         "//modules/common/proto:path_point_proto",
         "//modules/common/configs:vehicle_config_helper",
-        "//modules/planning/common:lib_planning_common",
+        "//modules/planning/common:planning_common",
         "//modules/canbus/proto:canbus_proto",
         "//modules/localization/proto:localization_proto",
     ],
