trajectory --> path, moved to modules/common

--- a/modules/common/path/BUILD
+++ b/modules/common/path/BUILD
@@ -3,12 +3,12 @@ load("//tools:cpplint.bzl", "cpplint")
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "pnc_trajectory",
+    name = "pnc_path",
     srcs = [
-        "trajectory.cc",
+        "path.cc",
     ],
     hdrs = [
-        "trajectory.h",
+        "path.h",
     ],
     deps = [
         "//modules/map/proto:map_proto",
