--- a/modules/prediction/evaluator/vehicle/BUILD
+++ b/modules/prediction/evaluator/vehicle/BUILD
@@ -17,6 +17,7 @@ cc_library(
         "//modules/prediction/common:prediction_common",
         "//modules/common/math:math_utils",
         "//modules/prediction/proto:fnn_vehicle_model_proto",
+        "//modules/prediction/common:prediction_util",
     ],
 )
 
