moved path.h/cc to modules/map/pnc_map, changed namespace to apollo/hdmap, added reference line.

--- a/modules/planning/reference_line/BUILD
+++ b/modules/planning/reference_line/BUILD
@@ -4,12 +4,18 @@ cc_library(
     name = "lib_reference_line",
     srcs = [
         "reference_point.cc",
+        "reference_line.cc",
     ],
     hdrs = [
         "reference_point.h",
+        "reference_line.h",
     ],
     deps = [
-        "//modules/common/path:pnc_path",
+        "//modules/common:log",
+        "//modules/common/proto:path_point_proto",
+        "//modules/map/pnc_map:pnc_path",
         "//modules/common/math:math",
+        "//modules/planning/math:double",
+        "//modules/planning/math:interpolation",
     ],
 )
