--- a/modules/prediction/evaluator/vehicle/BUILD
+++ b/modules/prediction/evaluator/vehicle/BUILD
@@ -14,7 +14,7 @@ cc_library(
         "//modules/prediction/evaluator:evaluator",
         "//modules/prediction/container/obstacles:obstacle",
         "//modules/prediction/proto:lane_graph_proto",
-        "//modules/prediction/common:prediction_common",
+        "//modules/prediction/common:prediction_gflags",
         "//modules/common/math:math_utils",
         "//modules/prediction/proto:fnn_vehicle_model_proto",
         "//modules/prediction/common:prediction_util",
