used integral in common/math, removed integration from planning/math

--- a/modules/common/math/BUILD
+++ b/modules/common/math/BUILD
@@ -248,6 +248,9 @@ cc_library(
     hdrs = [
         "integral.h",
     ],
+    deps = [
+        "//modules/common:log",
+    ],
 )
 
 cc_library(
