--- a/modules/dreamview/backend/BUILD
+++ b/modules/dreamview/backend/BUILD
@@ -67,6 +67,7 @@ cc_library(
         "simulation_world_service.h",
     ],
     deps = [
+        ":map_service",
         ":trajectory_point_collector",
         "//modules/canbus/proto:canbus_proto",
         "//modules/common:log",
@@ -95,14 +96,63 @@ cc_test(
     ],
 )
 
+filegroup(
+    name = "testdata",
+    srcs = glob(["testdata/*"]),
+)
+
+cc_library(
+    name = "map_service",
+    hdrs = [
+        "map_service.h"
+    ],
+    srcs = [
+        "map_service.cc"
+    ],
+    deps = [
+        "//modules/map/hdmap:hdmap",
+        "//third_party/json",
+        "@glog//:glog",
+    ],
+)
+
+cc_test(
+    name = "map_service_test",
+    srcs = [
+        "map_service_test.cc",
+    ],
+    data = [":testdata"],
+    deps = [
+        ":map_service",
+        "@gtest//:main",
+    ],
+)
+
+cc_library(
+    name = "simulation_world_updater",
+    hdrs = [
+        "simulation_world_updater.h"
+    ],
+    srcs = [
+        "simulation_world_updater.cc",
+    ],
+    deps = [
+        ":map_service",
+        ":simulation_world_service",
+        ":websocket",
+        "//external:gflags",
+        "@com_github_google_protobuf//:protobuf",
+    ],
+)
+
 cc_library(
     name = "backend",
     srcs = ["server.cc"],
     deps = [
-        ":simulation_world_service",
+        ":simulation_world_updater",
         ":websocket",
+        "//modules/common/adapters:adapter_manager",
         "@civetweb//:civetweb++",
-        "@com_github_google_protobuf//:protobuf",
     ],
 )
 
